--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,17 @@
-<div class="navbar">
-  <a href="#">🏦 Início</a>
-  <a href="#">💸 Transferências</a>
-  <a href="#">🧾 Pagamentos</a>
-  <a href="#">📊 Investimentos</a>
-  <a href="/logout" class="logout">Sair</a>
+<button onclick="toggleMobileMenu()">☰ Menu</button>
+<div class="mobile-navbar">
+  <div id="mobile-menu" style="display: none;">
+    <a href="#">🏦 Início</a>
+    <a href="#">💸 Transferências</a>
+    <a href="#">🧾 Pagamentos</a>
+    <a href="#">📊 Investimentos</a>
+    <a href="/logout" class="logout">Sair</a>
+  </div>
 </div>
+
+<script>
+  function toggleMobileMenu() {
+    const menu = document.getElementById("mobile-menu");
+    menu.style.display = menu.style.display === "block" ? "none" : "block";
+  }
+</script>
