--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -68,7 +68,7 @@
     <div class="actions-buttons">
       <button class="action-btn">Nova Transferência</button>
       <button class="action-btn">Pagar Conta</button>
-      <button class="action-btn">Histórico de Transações</button>
+      <button class="action-btn latest">Histórico de Transações</button>
     </div>
   </section>
 </main>
