--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CriptoApp - Login</title>
+  <title>Kimura CryptoApp - Login</title>
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <div class="login-container">
-    <h1>CriptoApp</h1>
+    <h1>Kimura CryptoApp</h1>
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="E-mail" required autofocus />
       <input type="password" name="password" placeholder="Senha" required />
